welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	var x:String=setCouleurBrosse()
                                     ^MethodsPicture:5: error: type mismatch;
 found   : java.awt.Color
 required: String
	x=Color.yellow
                ^MethodsPicture:10: error: type mismatch;
 found   : java.awt.Color
 required: String
     x=Color.red
             ^MethodsPicture:15: error: type mismatch;
 found   : java.awt.Color
 required: String
     x=Color.blue
             ^MethodsPicture:20: error: type mismatch;
 found   : java.awt.Color
 required: String
     x=Color.green
             ^